--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: #FFFFE0; /* Warna kuning cerah */
   font-family: Arial, sans-serif; /* Jenis huruf yang bersih dan mudah dibaca */
-  color: #191970; /* Warna teks utama (Biru Gelap) */
+  color: #FAA943; /* Warna teks utama (Pink rose) */
 }
 
 .kartu-profil {
