--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #FFFFE0; /* Warna kuning cerah */
+  background-color: #FADAD9; /* Warna kuning cerah */
   font-family: Arial, sans-serif; /* Jenis huruf yang bersih dan mudah dibaca */
   color: #191970 /* Warna teks utama (Pink rose) */
 }
