--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: #FADAD9; /* Warna kuning cerah */
-  font-family: Arial, sans-serif; /* Jenis huruf yang bersih dan mudah dibaca */
+  font-family: Arial, comic-sans; /* Jenis huruf yang bersih dan mudah dibaca */
   color: #C65C69 /* Warna teks utama (Pink rose) */
 }
 
